; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/vc/extr_mmal_vc_opaque_alloc.c_mmal_vc_opaque_acquire.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/vc/extr_mmal_vc_opaque_alloc.c_mmal_vc_opaque_acquire.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64, i32, i32 }

@MMAL_WORKER_OPAQUE_MEM_ACQUIRE = common dso_local global i32 0, align 4
@MMAL_WORKER_OPAQUE_ALLOCATOR = common dso_local global i32 0, align 4
@MMAL_FALSE = common dso_local global i32 0, align 4
@MMAL_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mmal_vc_opaque_acquire(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_3__, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  store i64 24, i64* %5, align 8
  %6 = load i32, i32* %2, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32 %6, i32* %7, align 8
  %8 = load i32, i32* @MMAL_WORKER_OPAQUE_MEM_ACQUIRE, align 4
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 3
  store i32 %8, i32* %9, align 4
  %10 = call i32 (...) @mmal_vc_get_client()
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 2
  %12 = load i32, i32* @MMAL_WORKER_OPAQUE_ALLOCATOR, align 4
  %13 = load i32, i32* @MMAL_FALSE, align 4
  %14 = call i64 @mmal_vc_sendwait_message(i32 %10, i32* %11, i32 24, i32 %12, %struct.TYPE_3__* %4, i64* %5, i32 %13)
  store i64 %14, i64* %3, align 8
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* @MMAL_SUCCESS, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %1
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  store i64 %20, i64* %3, align 8
  br label %21

21:                                               ; preds = %18, %1
  %22 = load i64, i64* %3, align 8
  ret i64 %22
}

declare dso_local i64 @mmal_vc_sendwait_message(i32, i32*, i32, i32, %struct.TYPE_3__*, i64*, i32) #1

declare dso_local i32 @mmal_vc_get_client(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
